# mc_recorder

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.frontend  README.md  docker-compose.server.yml  docker-compose.yml  nginx.conf  pgvector-init.sql  pom.xml  schema.sql
.claude/: settings.local.json
.github/workflows/: deploy.yml
http-test/: ai-flow.http  ai-test.http  auth.http  chat-unified.http  github.http  hello.http  pagination-test.http  rag.http  redis-test.http  resonator.http  test.http
mc_recorder_web/: index.html  package-lock.json  package.json  vite.config.js
mc_recorder_web/src/: main.js
mc_recorder_web/src/api/: ai.js  auth.js  index.js  kurobbs.js  resonator.js
mc_recorder_web/src/components/chat/: ChatHeader.vue  ChatLayout.vue  ChatSessionItem.vue  InputBar.vue  (+5 more)
mc_recorder_web/src/router/: index.js
mc_recorder_web/src/store/: conversation.js  user.js
mc_recorder_web/src/views/: AiChatView.vue  HomeView.vue  KurobbsView.vue  LoginView.vue  MainLayout.vue  RegisterView.vue  ResonatorListView.vue
python_ai_service/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
python_ai_service/app/: config.py  main.py
python_ai_service/app/chat/: router.py  schemas.py  service.py
python_ai_service/app/graph/: __init__.py  builder.py
python_ai_service/app/memory/: checkpointer.py
python_ai_service/app/rag/: ingest.py  vector_store.py
python_ai_service/app/tools/: __init__.py  github_tool.py  resonator_tool.py  search_tool.py  time_tool.py
python_ai_service/knowledge/: wuwa.md
src/main/resources/: application.yaml
(+63 files in other folders)
