[project]
name = "python-ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.7",
    "langchain-openai>=1.3.0",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
]
